--- a/HospitalApp/src/app/admin/admin.component.html
+++ b/HospitalApp/src/app/admin/admin.component.html
@@ -30,16 +30,32 @@
     
 </mat-card>
 
-<mat-card class="center">
+<!-- <mat-card class="center">
     <p *ngFor = "let sguli of patientArray">
         {{ sguli.patientId }}
-        <!-- {{ sguli.patientName }}
+        {{ sguli.patientName }}
         {{ sguli.patientSurname }}
         {{ sguli.patientAge }}
         {{ sguli.patientPhoneNumber }} 
-        {{ sguli.patientGender }} -->
+        {{ sguli.patientGender }}
         <button mat-fab color="warn" (click)="edittask(sguli)"><mat-icon>edit</mat-icon></button>
         <button mat-fab color="primary" [routerLink]="['/patientdetails', sguli.patientId]">View</button>
         <button mat-fab color="warn" (click)="removetask(sguli)"><mat-icon>delete</mat-icon></button>
     </p>
+</mat-card> -->
+
+<mat-card>
+    <table mdbTable align="center">    
+        <tbody>
+            <tr mdbTableCol *ngFor="let sguli of patientArray">
+                <td> {{ sguli.patientId}} </td>
+                <td>
+                    <button mat-fab color="warn" (click)="edittask(sguli)"><mat-icon>edit</mat-icon></button>
+                    <button mat-fab color="primary" [routerLink]="['/patientdetails', sguli.patientId]">View</button>
+                    <button mat-fab color="warn" (click)="removetask(sguli)"><mat-icon>delete</mat-icon></button>
+                </td>
+            </tr>
+               
+        </tbody>
+    </table>
 </mat-card>
