--- a/HospitalApp/src/app/app.component.html
+++ b/HospitalApp/src/app/app.component.html
@@ -2,7 +2,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <span [routerLink]="['/admin']" class="paddings">Admin</span>
-    <span class="paddings">Patient</span>
+    <span [routerLink]="['/patient']" class="paddings">Patient</span>
     <span class="paddings">Doctor</span>
   </mat-toolbar-row>
 </mat-toolbar>
