--- a/HospitalApp/src/app/app.component.html
+++ b/HospitalApp/src/app/app.component.html
@@ -3,7 +3,7 @@
   <mat-toolbar-row>
     <span [routerLink]="['/admin']" class="paddings">Admin</span>
     <span [routerLink]="['/patient']" class="paddings">Patient</span>
-    <span class="paddings">Doctor</span>
+    <span [routerLink]="['/doctor']" class="paddings">Doctor</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
